# Brim

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  main.cpp
src/lib/: CMakeLists.txt  gc.cpp  gc.h  object.cpp  object.h  parse.cpp  parse.h  vm.cpp  vm.h
test/: CMakeLists.txt  lexer.cpp  object-ctor.cpp  object-tostr.cpp  parser.cpp  test.h
